--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Data Driven</th></tr>
-<tr><td><a href="#t0">Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,208</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Bank Manager Login Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,344</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Add Customer Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">849</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">6,193</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Data Driven</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginTest</td><td><a href="#m0">LoginAsBankManager</a></td><td rowspan="1">1616941743271</td><td rowspan="1">5148</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Data Driven</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Bank Manager Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.BankManagerLoginTest</td><td><a href="#m0">LoginAsBankManager</a></td><td rowspan="1">1617013999255</td><td rowspan="1">5289</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Add Customer Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.AddCustomerTest</td><td><a href="#m1">addCustomer</a></td><td rowspan="1">1617014004599</td><td rowspan="1">825</td></tr></tbody>
 </table>
-<h2>Login Test</h2><h3 id="m0">testCases.LoginTest#LoginAsBankManager</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Bank Manager Login Test</h2><h3 id="m0">testCases.BankManagerLoginTest#LoginAsBankManager</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Add Customer Test</h2><h3 id="m1">testCases.AddCustomerTest#addCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Raam</td><td>mishra</td><td>a234wd</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
