--- a/test-output/old/Data Driven/methods-alphabetical.html
+++ b/test-output/old/Data Driven/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Data Driven</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c6f1ae">  <td>21/03/28 19:59:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginAsBankManager()[pri:0, instance:testCases.LoginTest@2bbf4b8b]">LoginAsBankManager</td> 
-  <td>main@640363654</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>21/03/28 19:58:58</td>   <td>-4855</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.LoginTest@2bbf4b8b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640363654</td>   <td></td> </tr>
-<tr bgcolor="85d8b6">  <td>21/03/28 19:59:08</td>   <td>5192</td> <td title="&lt;&lt;testBase.tesrDown()[pri:0, instance:testCases.LoginTest@2bbf4b8b]">&lt;&lt;tesrDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640363654</td>   <td></td> </tr>
+<tr bgcolor="927e80">  <td>21/03/29 16:03:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.LoginAsBankManager()[pri:0, instance:testCases.BankManagerLoginTest@2a266d09]">LoginAsBankManager</td> 
+  <td>main@1631086936</td>   <td></td> </tr>
+<tr bgcolor="dd6dab">  <td>21/03/29 16:03:24</td>   <td>5344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@776b83cc]">addCustomer</td> 
+  <td>main@1631086936</td>   <td></td> </tr>
+<tr bgcolor="9273a8">  <td>21/03/29 16:03:14</td>   <td>-4817</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.AddCustomerTest@776b83cc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631086936</td>   <td></td> </tr>
+<tr bgcolor="9273a8">  <td>21/03/29 16:03:25</td>   <td>6190</td> <td title="&lt;&lt;testBase.tearDown()[pri:0, instance:testCases.AddCustomerTest@776b83cc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631086936</td>   <td></td> </tr>
 </table>
