--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,24 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">118</td><td></td><td></td></tr>
+<tr><th colspan="8">Data Driven</th></tr>
+<tr><td><a href="#t0">Bank Manager Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">445</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Add Customer Test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">5,409</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Open Account Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">701</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">5</th><th class="num attn">1</th><th class="num">0</th><th class="num">0</th><th class="num">6,555</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.BankManagerLoginTest</td><td><a href="#m0">bankName</a></td><td rowspan="1">1617205028771</td><td rowspan="1">67</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Data Driven</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Bank Manager Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.BankManagerLoginTest</td><td><a href="#m0">bankName</a></td><td rowspan="1">1617272749839</td><td rowspan="1">128</td></tr><tr class="passedeven"><td><a href="#m1">loginAsBankManager</a></td><td rowspan="1">1617272749988</td><td rowspan="1">255</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Add Customer Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testCases.AddCustomerTest</td><td><a href="#m2">addCustomerTest</a></td><td rowspan="1">1617272753653</td><td rowspan="1">12</td></tr><tr><th colspan="4">Add Customer Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.AddCustomerTest</td><td><a href="#m3">addCustomerTest</a></td><td rowspan="2">1617272750741</td><td rowspan="2">2906</td></tr><tr class="passedeven"><td><a href="#m4">addCustomerTest</a></td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Open Account Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.OpenAccountTest</td><td><a href="#m5">openAccountTest</a></td><td rowspan="1">1617272756275</td><td rowspan="1">696</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.BankManagerLoginTest#bankName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Bank Manager Login Test</h2><h3 id="m0">testCases.BankManagerLoginTest#bankName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.BankManagerLoginTest#loginAsBankManager</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Add Customer Test</h2><h3 id="m2">testCases.AddCustomerTest#addCustomerTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>Shyam</td><td>mishra</td><td>a242wd</td><td>N</td></tr><tr><th colspan="4">Exception</th></tr><tr><td colspan="4"><div class="stacktrace">org.testng.SkipException: Skipping the dataSet
+	at testCases.AddCustomerTest.addCustomerTest(AddCustomerTest.java:17)
+	at java.util.ArrayList.forEach(ArrayList.java:1259)
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.AddCustomerTest#addCustomerTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>Raam</td><td>mishra</td><td>a234wd</td><td>Y</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testCases.AddCustomerTest#addCustomerTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>Sam</td><td>mishra</td><td>saok12</td><td>Y</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Open Account Test</h2><h3 id="m5">testCases.OpenAccountTest#openAccountTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Raam mishra</td><td>Rupee</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
