--- a/test-output/old/Data Driven/classes.html
+++ b/test-output/old/Data Driven/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addCustomer</td>
+<td>addCustomerTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -33,7 +33,33 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginAsBankManager</td>
+<td>loginAsBankManager</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>bankName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>testCases.OpenAccountTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>openAccountTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
