--- a/test-output/old/Data Driven/methods.html
+++ b/test-output/old/Data Driven/methods.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Data Driven</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7b76d">  <td>21/03/30 14:37:22</td>   <td>0</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.AddCustomerTest@37858383]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944978632</td>   <td></td> </tr>
-<tr bgcolor="b4cef0">  <td>21/03/30 14:37:27</td>   <td>4884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.LoginAsBankManager()[pri:0, instance:testCases.BankManagerLoginTest@5ab9e72c]">LoginAsBankManager</td> 
-  <td>main@1944978632</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>21/03/30 14:37:27</td>   <td>5256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@37858383]">addCustomer</td> 
-  <td>main@1944978632</td>   <td></td> </tr>
-<tr bgcolor="a7b76d">  <td>21/03/30 14:37:28</td>   <td>5923</td> <td title="&lt;&lt;testBase.tearDown()[pri:0, instance:testCases.AddCustomerTest@37858383]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1944978632</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>21/04/01 15:55:45</td>   <td>0</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.OpenAccountTest@506ae4d4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="a6899d">  <td>21/04/01 15:55:49</td>   <td>4640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.bankName()[pri:0, instance:testCases.BankManagerLoginTest@4803b726]">bankName</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="a6899d">  <td>21/04/01 15:55:49</td>   <td>4789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.loginAsBankManager()[pri:0, instance:testCases.BankManagerLoginTest@4803b726]">loginAsBankManager</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="6d79fc">  <td>21/04/01 15:55:50</td>   <td>5542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@2d710f1a]">addCustomerTest</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="6d79fc">  <td>21/04/01 15:55:53</td>   <td>8454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@2d710f1a]">addCustomerTest</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="6d79fc">  <td>21/04/01 15:55:53</td>   <td>8473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@2d710f1a]">addCustomerTest</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="9b60e0">  <td>21/04/01 15:55:56</td>   <td>11076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpenAccountTest.openAccountTest(java.lang.String, java.lang.String)[pri:0, instance:testCases.OpenAccountTest@506ae4d4]">openAccountTest</td> 
+  <td>main@1707582034</td>   <td></td> </tr>
+<tr bgcolor="fcf36f">  <td>21/04/01 15:55:57</td>   <td>11913</td> <td title="&lt;&lt;testBase.tearDown()[pri:0, instance:testCases.OpenAccountTest@506ae4d4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1707582034</td>   <td></td> </tr>
 </table>
