--- a/test-output/old/Data Driven/reporter-output.html
+++ b/test-output/old/Data Driven/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Capturing ScreenShot</td></tr>
-<tr><td><a target="_blank" href="D:\3.png">Screenshot</a></td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
