--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fba77">  <td>21/03/31 21:07:03</td>   <td>0</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.BankManagerLoginTest@752325ad]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="9768b3">  <td>21/03/31 21:07:08</td>   <td>4819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.bankName()[pri:0, instance:testCases.BankManagerLoginTest@752325ad]">bankName</td> 
-  <td>main@1536471117</td>   <td></td> </tr>
-<tr bgcolor="7fba77">  <td>21/03/31 21:07:08</td>   <td>4929</td> <td title="&lt;&lt;testBase.tearDown()[pri:0, instance:testCases.BankManagerLoginTest@752325ad]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536471117</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>21/04/01 15:53:37</td>   <td>0</td> <td title="&gt;&gt;testBase.setUp()[pri:0, instance:testCases.AddCustomerTest@1ff4931d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504858437</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>21/04/01 15:53:42</td>   <td>4817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@1ff4931d]">addCustomerTest</td> 
+  <td>main@504858437</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>21/04/01 15:53:49</td>   <td>12280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@1ff4931d]">addCustomerTest</td> 
+  <td>main@504858437</td>   <td></td> </tr>
+<tr bgcolor="85d8b6">  <td>21/04/01 15:53:49</td>   <td>12288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomerTest(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:testCases.AddCustomerTest@1ff4931d]">addCustomerTest</td> 
+  <td>main@504858437</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>21/04/01 15:53:49</td>   <td>12508</td> <td title="&lt;&lt;testBase.tearDown()[pri:0, instance:testCases.AddCustomerTest@1ff4931d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504858437</td>   <td></td> </tr>
 </table>
